modif de amel_index.html

--- a/templates/amel_index.html
+++ b/templates/amel_index.html
@@ -6,7 +6,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
       body{
-        background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/3a/Djeno_Collines_littorales_touristiques_5441746129.jpg");
+       /*  background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/3a/Djeno_Collines_littorales_touristiques_5441746129.jpg"); */
 
       }
 
@@ -19,10 +19,13 @@
        <dl>
          <dt>article 1</dt>
          <dd>
-            définition, mangalé, Montreuil, Auchant,... 1
-            définition, mangalé, Montreuil, Auchant,... 1
-            définition, mangalé, Montreuil, Auchant,... 1
-            définition, mangalé, Montreuil, Auchant,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
+            définition, montreuil,,... 1
 
          </dd>
          <dt>article 2</dt>
